# ece

./: .breakpoints  .gitpod.yml  .replit  Cargo.toml  Dockerfile  FILE-STRUCTURE-CODE.md  SPRINT-BREAKDOWN.md  WALLET.md  deploy.sh  docker-compose.yml  jsconfig.json  lib.rs  nx.json  package-lock.json  package.json  replit.nix  sentry.js  tailwind.config.js  webpack.config.js
.codesandbox/: tasks.json
app/: layout.ts  page.ts
apps/ece/src/contracts/: Cargo.toml
apps/ece/src/contracts/src/: lib.rs  main.rs  utils.rs
apps/ece/src/contracts/src/api/graphql/entity/: *.rs  mod.rs  quiz-answers-entity.rs  quizzes-entity.rs
apps/ece/src/contracts/src/api/interfaces/: marketplace-interface.ts  node-management-interface.ts  subscription-interface.ts
apps/ece/src/contracts/src/api/near-api/: near-api.js  nearService.js  node-management.js
apps/ece/src/contracts/src/api/near-api/controllers/: userController.js
apps/ece/src/contracts/src/api/thirdweb/: wallet-crowdfunding-interface.ts
apps/ece/src/contracts/src/app/: bitcell.rs  contribute.rs  marketplace.rs  nano-node.rs  wallet.rs
apps/ece/src/contracts/src/app/ece/: socket-chat.rs  thepublic.rs  txn-tracker.rs
apps/ece/src/contracts/src/app/marketplace/: idw.rs  subscription.rs
apps/ece/src/contracts/src/lib/: addresses.ts  hooks.ts  utils.ts
apps/ece/src/contracts/src/services/: airdropService.js  cardService.js  rewardService.js
apps/ece/src/contracts/src/utils/: constants.ts  stripe.js
docs/: DEVELOPER-DOCS.md  NEAR-RUST-SDK.md  PROXIES.md  SPRINT-BREAKDOWN.md  TAGS-TIMELINE.md  VERSIONING.md  (+1 more)
(+213 files in other folders)
