[package]
name = "ece-cleanfolio"
version = "0.1.0"
edition = "2018"

[dependencies]
near-sdk = "4.1.1"
tokio = { version = "1", features = ["full"] }
sea-orm = "0.8"
sea-orm-migration = "0.8"
sea-orm-cli = "0.8"
dotenv = "0.15"
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "macros", "postgres"] }
serde = "1.0"
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"